# WissRech1

./: CMakeLists.txt  README.md  calcSIMD.cpp  calcSIMD.h  executionData.h  inverseIterationMethods.cpp  jacobiIterationSolver.cpp  jacobiIterationSolver.h  mUtil.cpp  mUtil.h  main.cpp  memAlignOS.h  solveTask0.cpp  solveTask10.cpp  solveTask12.cpp  solveTask13.cpp  solveTask3.cpp  solveTask5.cpp  solveTask6.cpp  solveTask7.cpp  solveTask8.cpp  solveTask9.cpp  solveTasks.h
Abgabe/: Makefile
Abgabe/Task10_11/: Aufgabe10u11.txt  main.cpp
Abgabe/Task12/: Aufgabe12.txt  main.cpp
Abgabe/Task5/: jacobiIterationSolver.cpp  solveTask5.cpp
Abgabe/Task6_7_8/: memAlignOS.cpp  solveTask6.cpp  solveTask7.cpp  solveTask8.cpp  solveTasks.h
Matlab/: WissRech1_old.m
WissRech1/: CMakeLists.txt  Readme_Erklaerung_Aufgabe.txt  jacobiIterationSolver.cpp  solveTask10.cpp  solveTask4.cpp  solveTask7.cpp
WissRech1/Abgabe/Task10_11/: main.cpp
WissRech1/Abgabe/Task12/: main.cpp
WissRech1/Abgabe/Task5/: Makefile  executionData.h  jacobiIterationSolver.h  main.cpp
WissRech1/Abgabe/Task6_7_8/: Aufgabe678
WissRech1/Matlab/: WissRech1.m  WissRech_0.m
